# kinsol-psblas

./: .gitignore  CMakeLists.txt  README.md
config/: FindMLD2P4.cmake  FindMLD2P4_EXT.cmake  FindPSBLAS.cmake  FindPSBLAS_EXT.cmake  SundialsMLD2P4.cmake  SundialsMLD2P4_EXT.cmake  SundialsPSBLAS.cmake  SundialsPSBLAS_EXT.cmake
doc/kinsol-psblas/: bibliography.bib  kinsol-psblas_guide.run.xml  kinsol-psblas_guide.tex
examples/kinsol/: CMakeLists.txt
examples/kinsol/psblas/: CMakeLists.txt  GinzburgLandau.c  README  kinFoodWeb_kry_psblas.c  kinsol.inp
examples/kinsol/richards/: CMakeLists.txt  README  kinsol.inp  richards.c
examples/nvector/: CMakeLists.txt
examples/nvector/psblas/: CMakeLists.txt  test_nvector_psblas.c
examples/sunlinsol/: CMakeLists.txt
examples/sunlinsol/psblas/: CMakeLists.txt  test_sunlinsol_psblas.c
examples/sunmatrix/: CMakeLists.txt
examples/sunmatrix/psblas/: CMakeLists.txt  test_sunmatrix_psblas.c
examples/templates/: cmakelists_psblas_C_ex.in  makefile_psblas_C_ex.in
include/nvector/: nvector_psblas.h
include/sunlinsol/: sunlinsol_psblas.h
include/sunmatrix/: sunmatrix_psblas.h
src/nvector/: CMakeLists.txt
src/nvector/psblas/: CMakeLists.txt  nvector_psblas.c
src/sunlinsol/: CMakeLists.txt
src/sunlinsol/psblas/: CMakeLists.txt  sunlinsol_psblas.c
src/sunmatrix/: CMakeLists.txt
src/sunmatrix/psblas/: CMakeLists.txt  make2cmakeset.sh  sunmatrix_psblas.c
